like overflow solved

--- a/src/components/VideoDetails/VideoDetails.css
+++ b/src/components/VideoDetails/VideoDetails.css
@@ -25,10 +25,10 @@
 
 @media screen and (max-width: 950px) {
     .upper {
-        height: 300px;
+        height: 320px;
     }
     .upper-content{
-        height: 300px;
+        height: 320px;
     }
 }
 
